<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_make_todo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sigor.todolist.MakeTodo"
    android:orientation="vertical"
    android:background="@color/primary_light">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_name"/>
    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="0.9"
        android:orientation="horizontal">
        <Button
            android:id="@+id/editCancelButton"
            android:text="@string/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
        <Button
            android:id="@+id/editRemoveButton"
            android:text="@string/remove_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
        <Button
            android:id="@+id/editButton"
            android:text="@string/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_edit"/>
</LinearLayout>
